# project-sakai

./: .gitignore  README.md  Taniman-README.txt  app.js  calendar.js  config.js  data.js  generate_tiles.py  index.html  month-view-utils.js  offline-storage.js  requirements-dev.txt  styles.css  supabase-sync.js  taniman.html  vercel.json
.github/workflows/: build.yml
docs/: supabase-setup.sql
docs/superpowers/plans/: 2026-05-24-esri-hybrid-map.md  2026-05-24-offline-satellite-context.md  2026-05-24-taniman-digimap.md  2026-05-25-design-revisions-integration.md  2026-05-25-map-month-range-visibility.md  2026-05-26-map-composition-legend.md  2026-05-26-offline-laptop-build.md  2026-05-28-macos-support.md  2026-05-29-coverage-pulldown-tab.md  2026-05-29-coverage-tab-pulldown.md  2026-05-29-open-data-dir-button.md
docs/superpowers/specs/: 2026-05-24-esri-hybrid-map-design.md  2026-05-24-offline-satellite-context-design.md  2026-05-24-taniman-digimap-design.md  2026-05-25-design-revisions-integration-design.md  2026-05-25-map-month-range-visibility-design.md  2026-05-26-map-composition-legend-design.md  (+5 more)
fonts/: fonts.css
src-tauri/: Cargo.toml  package-lock.json  package.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: prepare-dist.mjs
src-tauri/src/: main.rs
tests/: desktop-lockfile.test.mjs  macos-build-workflow.test.mjs  map-composition-legend.test.mjs  map-month-range-integration.test.mjs  map-zoom-config.test.mjs  month-view-utils.test.mjs  tauri-save-zip.test.mjs  translations.test.mjs
